Adicionando documentação do filter
